Upgrade: Update devDependencies for security fix - handlebars, lodash

--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "gulp-markdown": "^4.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-spawn-mocha": "^5.0.1",
+    "handlebars": ">=4.0.14",
     "istanbul": "^0.4.5",
     "lodash.template": ">=4.5.0",
+    "lodash": ">=4.17.15",
     "mem": ">=4.0.0",
     "mocha": "^6.1.4",
     "semver": "^6.2.0",
