--- a/package.json
+++ b/package.json
@@ -31,25 +31,25 @@
   "homepage": "https://github.com/xslet/datatype#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "coveralls": "^3.0.4",
-    "del": "^5.0.0",
+    "coveralls": "^3.0.9",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
     "gulp-fun-style": "^0.3.2",
     "gulp-headerfooter": "^1.0.3",
-    "gulp-markdown": "^4.0.0",
+    "gulp-markdown": "^5.0.1",
     "gulp-plumber": "^1.2.1",
-    "gulp-spawn-mocha": "^5.0.1",
-    "handlebars": ">=4.0.14",
+    "gulp-spawn-mocha": "^6.0.0",
+    "handlebars": ">=4.5.3",
     "istanbul": "^0.4.5",
-    "lodash.template": ">=4.5.0",
     "lodash": ">=4.17.15",
-    "mem": ">=4.0.0",
-    "mocha": "^6.1.4",
-    "semver": "^6.2.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
+    "lodash.template": ">=4.5.0",
+    "mem": ">=6.0.1",
+    "mocha": "^6.2.2",
+    "semver": "^7.0.0",
+    "terser-webpack-plugin": "^2.3.0",
     "vinyl-named": "^1.1.0",
-    "webpack": "^4.35.2",
+    "webpack": "^4.41.2",
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
