--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": ">= 8.0.0"
   },
   "scripts": {
+    "build": "gulp",
     "test": "gulp test",
     "coveralls": "gulp coverage && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
   },
@@ -31,7 +32,7 @@
   "homepage": "https://github.com/xslet/datatype#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "coveralls": "^3.0.9",
+    "coveralls": "^3.1.0",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
@@ -40,16 +41,16 @@
     "gulp-markdown": "^5.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-spawn-mocha": "^6.0.0",
-    "handlebars": ">=4.5.3",
+    "handlebars": ">=4.7.6",
     "istanbul": "^0.4.5",
     "lodash": ">=4.17.15",
     "lodash.template": ">=4.5.0",
-    "mem": ">=6.0.1",
-    "mocha": "^6.2.2",
-    "semver": "^7.0.0",
-    "terser-webpack-plugin": "^2.3.0",
+    "mem": ">=6.1.0",
+    "mocha": "^7.1.2",
+    "semver": "^7.3.2",
+    "terser-webpack-plugin": "^3.0.0",
     "vinyl-named": "^1.1.0",
-    "webpack": "^4.41.2",
+    "webpack": "^4.43.0",
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
