--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "src/",
     "dist/"
   ],
-  "engines": {
-    "node": ">= 8.0.0"
-  },
   "scripts": {
     "build": "gulp",
     "test": "gulp test",
+    "coverage": "nyc mocha test/*.test.js",
     "coveralls": "gulp coverage && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
   },
   "repository": {
@@ -38,20 +36,21 @@
     "gulp-eslint": "^6.0.0",
     "gulp-fun-style": "^0.3.2",
     "gulp-headerfooter": "^1.0.3",
-    "gulp-markdown": "^5.0.1",
+    "gulp-markdown": "^5.1.0",
+    "gulp-mocha": "^7.0.2",
     "gulp-plumber": "^1.2.1",
-    "gulp-spawn-mocha": "^6.0.0",
     "handlebars": ">=4.7.6",
-    "istanbul": "^0.4.5",
-    "lodash": ">=4.17.15",
+    "lodash": ">=4.17.20",
     "lodash.template": ">=4.5.0",
-    "mem": ">=6.1.0",
-    "mocha": "^7.1.2",
+    "mem": ">=6.1.1",
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0",
     "semver": "^7.3.2",
-    "terser-webpack-plugin": "^3.0.0",
+    "terser-webpack-plugin": "^4.1.0",
     "vinyl-named": "^1.1.0",
-    "webpack": "^4.43.0",
-    "webpack-stream": "^5.2.1"
+    "webpack": "^4.44.1",
+    "webpack-stream": "^6.1.0",
+    "yargs-parser": ">=13.1.2"
   },
   "dependencies": {
     "@fav/type.is-finite-number": "^1.0.2"
