--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-mocha": "^7.0.2",
     "gulp-plumber": "^1.2.1",
     "handlebars": ">=4.7.6",
+    "ini": ">=1.3.6",
     "lodash": ">=4.17.20",
     "lodash.template": ">=4.5.0",
     "mem": ">=6.1.1",
